添加 联系客服  微信地址获取冒泡问题
添加 联系客服  微信地址获取冒泡问题

--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wxc437794e7f05c4ba",
-	"projectname": "shopping",
+	"projectname": "O2O",
 	"condition": {
 		"search": {
 			"current": -1,
