--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
 {
   "pages":[
+    
+    
    "pages/noshop/noshop",
     "pages/index/index",
     "pages/second/second",
-    "pages/myOrder/myOrder"
-    
+    "pages/myOrder/myOrder",
+    "pages/goodsDetail/index",
+    "pages/logistics/index",
+    "pages/show/show"
+ 
     
   ],
   "window":{
