新增订单详情、 物流订单号、修复店名居等细节
新增订单详情、 物流订单号、修复店名居等细节

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     
    "pages/noshop/noshop",
     "pages/index/index",
+    "pages/allOrder/index",
     "pages/second/second",
     "pages/myOrder/myOrder",
     "pages/goodsDetail/index",
